--- a/index.html
+++ b/index.html
@@ -18,28 +18,38 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
   </head>
-  <body class="bg"><!--<div class="container-fluid"><div class="row"><div class="col-sm-3">
-    <ul>
-     <li><a href="#section1">Home</a></li>
-     <li><a href="#section2">News</a></li>
-     <li><a href="#section3">Contact</a></li>
-     <li><a href="#section4">About</a></li>
-   </ul></div>
-<body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#section1">Section 1</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#section2">Section 2</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#section3">Section 3</a>
-    </li>
+  <body class="bg">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-center fixed-top">
+    <!-- Brand -->
+    <a class="navbar-brand" href="#">Website</a>
 
-  </ul>
-</nav>-->
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#section1">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section2">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section3">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section4">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section5">Link</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+<br><br>
 
     <div id="section1">
   <!--  <div class="jumbotron jumbotron-fluid">
@@ -60,13 +70,13 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3">
-      <ul>
+      <!--<ul>
        <li><a  href="#section1">About Me</a></li>
        <li><a  href="#section2">Education</a></li>
        <li><a  href="#section3">Technical Skills</a></li>
        <li><a  href="#section4">Projects</a></li>
        <li><a href="#section5">Contact</a></li>
-     </ul></div>
+     </ul>--></div>
       <div class="col-sm-6">
         <div class="card horizontal">
       <div class="card-image">
@@ -89,19 +99,20 @@
     <div class="edu"><br><br><h1 class="head">Education</h1><br><p class="quote"><i>The whole purpose of education is to turn mirrors into windows</i><br>--Sydney J. Harris</p>
   </div><br><div class="container-fluid"><div class="sec">
     <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-5"><h3 style=color:red><b>Institution<hr></b></h3><br> <h4><b>Modern School</h4><h5>Barrackpore,Kolkata-700122</h5></b>
-      <hr>  <br><br><br><h4><b>Modern English Academy</h4><h5>Barrackpore,Kolkata-700120</h5></b><hr>
-        <br><br><br><h4><b>Bholananda National Vidyalaya</h4><h5>Barrackpore,Kolkata-700120</h5></b><hr>
-        <br><br><br><h4><b>National Institute of Technology</h4><h5>Durgapur</h5></b></div>
-        <div class="col-sm-5"><h3 style=color:red><b>Education Tenure<hr></b></h3><br><h6>Primary education.<br>Duration: 4 years(class 1-4)</h6><br><br><br><br><hr>
-          <h6>Secondary Education.<br>Duration: 6 years(class 5-10)<br>Scored 97.6% in ICSE Examination<br>Year of passing:2016</h6><br><br><hr>High secondary education<br>Scored 95.4% in CBSE examinations.<br>Year of passing:2018</h6><br><br><hr>
-          <br><h6>Currently pursuing B.Tech(1st year)<br>Expected graduation year:2022</h6><br></div></div></div></div></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-6"><div class="educ"><h4>Modern School</h4><h5>Location:</h5><h6><i>Barrackpore,Kolkata-700122</i></h6>
+        <h5>Duration: </h5><h5><b>2003-2010</b></h5></div><br><br>
+      <div class="educ"><h4>Modern English Academy</h4><h5>Location:</h5><h6><i>Barrackpore,Kolkata-700122</i></h6>
+        <h5>Duration: </h5><h5><b>2010-2016</b></h5></div><br><br>
+      <div class="educ"><h4>Bholananda National Vidyalaya</h4><h5>Location: </h5><h6><i>Barrackpore, Kolkata-700120</i></h6>
+        <h5>Duration: </h5><h5><b>2016-2018</b></h5></div><br><br>
+      <div class="educ"><h4>National Institute of Technology,Durgapur</h4><h5>Location: </h5><h6><i>Durgapur</i></h6>
+        <h5>Duration: </h5><h5><b>2018-2022</b></h5></div><div class="col-sm-3"> </div></div> </div></div></div>
   <br><br> <div id="section3">
    <div class="edu"><h1 class="head">Technical Skills</h1><br><p class="quote"><i>Skill and confidence are unconquered army</i><br><b>--George Herbert</b></p>
    </div><br><br><div class="container"><div class="sec">
      <div class="row">
-       <div class="col-sm-3"></div>
+      <!-- <div class="col-sm-3"></div>-->
        <div class="col-sm-3">
 
       <div class="card bg-white text-dark">
@@ -116,7 +127,7 @@
       </div>
       </div>
     </div>
-
+<div class="col-sm-1"></div>
     <div class="col-sm-3">
       <div class="card bg-white text-dark">
         <div class="card-content white-text">
@@ -130,7 +141,7 @@ C is a general-purpose, imperative computer programming language, supporting str
         </div>
       </div>
     </div>
-
+<div class="col-sm-1"></div>
     <div class="col-sm-3">
       <div class="card bg-white text-dark">
         <div class="card-content white-text">
@@ -146,7 +157,7 @@ C is a general-purpose, imperative computer programming language, supporting str
     </div>
   </div><br><br>
   <div class="row">
-    <div class="col-sm-3"></div>
+  <!--  <div class="col-sm-3"></div>-->
     <div class="col-sm-3">
       <div class="card bg-white text-dark">
         <div class="card-content white-text">
@@ -160,7 +171,7 @@ C is a general-purpose, imperative computer programming language, supporting str
         </div>
       </div>
     </div>
-
+ <div class="col-sm-1"></div>
     <div class="col-sm-3">
       <div class="card bg-white text-dark">
         <div class="card-content white-text">
@@ -173,7 +184,7 @@ C is a general-purpose, imperative computer programming language, supporting str
         </div>
       </div>
     </div>
-
+ <div class="col-sm-1"></div>
     <div class="col-sm-3">
       <div class="card bg-white text-dark">
         <div class="card-content white-text">
@@ -204,19 +215,19 @@ C is a general-purpose, imperative computer programming language, supporting str
   <div class="container"><div class="sec">
     <div class="row">
       <div class="col-sm-2"></div>
-      <div class="col-sm-5"><h3 style=color:red><b>Voice to text conversion</b></h3><hr><br><br>
-        <h5>This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
-          up this project have been mentioned in the readme.md file.Click <a href="https://github.com/promaroy/speech_recog">here</a> to view the project.</h5></div>
-          <div class="col-sm-5"><h3 style=color:red><b>Webscraping using python</b></h3><hr><br><br>
-          <h5>The project was created using python3 and selenium.With the help of this python script ones
-            can easily submit a problem to codechef through the terminal without logging in. Click <a href="https://github.com/promaroy/autocoding">here</a> to view the project.</h5></div>
-          </div><br><br>
-          <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-5"><h3 style=color:red><b>Django hello world app</b></h3><hr><br><br>
-              <h5>This project was created using a python framework django.It is a simple hello world app
+      <div class="col-sm-8"><div class="proj"><h3><b>Voice to text conversion</b></h3><hr><br>
+        This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
+          up this project have been mentioned in the readme.md file.Click <a href="https://github.com/promaroy/speech_recog">here</a> to view the project.</div>
+        <br><br>  <div class="proj"><h3><b>Webscraping using python</b></h3><hr><br>
+          The project was created using python3 and selenium.With the help of this python script ones
+            can easily submit a problem to codechef through the terminal without logging in. Click <a href="https://github.com/promaroy/autocoding">here</a> to view the project.</div>
+
+
+
+            <br><br><div class="proj"><h3><b>Django hello world app</b></h3><hr><br>
+              This project was created using a python framework django.It is a simple hello world app
                 made as a part of glug task. Click <a href="https://github.com/promaroy/django1">here</a> to view the project.
-              </h5></div></div></div></div><br><br>
+              </div></div></div></div></div><br><br>
     <div id="section5">  <div class="head">  <div class="edu"><a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-linkedin"></a><h5>Contact No: 8420042422<br>Email:promaroy20@gmail.com</h5>
   <a href="#section1"><i class="fa fa-angle-double-up" style="font-size:36px"></i></a>
