--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <title></title>
   </head>
   <body class="bg">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-center fixed-top">
+    <nav class="navbar navbar-expand-sm py-1 bg-dark navbar-dark justify-content-center fixed-top">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">Website</a>
+    <a class="navbar-brand" href="#section1"><i class="fa fa-home"></i></a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -32,24 +32,24 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#section1">Link</a>
+          <a class="nav-link" href="#section1">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">Link</a>
+          <a class="nav-link" href="#section2">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section3">Link</a>
+          <a class="nav-link" href="#section3">Technical skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section4">Link</a>
+          <a class="nav-link" href="#section4">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section5">Link</a>
+          <a class="nav-link" href="#section5">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
-<br><br>
+<br><br><br>
 
     <div id="section1">
   <!--  <div class="jumbotron jumbotron-fluid">
@@ -79,23 +79,23 @@
      </ul>--></div>
       <div class="col-sm-6">
         <div class="card horizontal">
-      <div class="card-image">
+    <!--  <div class="card-image">
         <img src="#">
-      </div>
+      </div>-->
       <div class="card-stacked">
         <div class="card-content">
 
-      <!--  <div class="card bg-dark text-white">
-          <div class="card-content white-text">-->
+        <div class="card bg-dark text-white">
+          <div class="card-content white-text">
              <div class="card-header" style=color:red><b><h1>About me</h1></div>
       <p >Hello there!..My name is Proma Roy. I am a resident of Kolkata.<br> I am a freshman pursuing B.Tech in Computer Science and engineering in Nit Durgapur
       My website contains my education details till date, the projects which I have completed and also the ones  which
-      I am currently working on. It also contains the technology skills which I possess.<br>I love to solve problems.Whether it's the most elegant way to write a line of code or  discovering the solution. Viewers are free to contact me through the contact details provided.</div></div></div></div></b>
+      I am currently working on. It also contains the technology skills which I possess.<br>I love to solve problems.Whether it's the most elegant way to write a line of code or  discovering the solution. Viewers are free to contact me through the contact details provided.</div></div></div></div></div></div></b>
       <div class="col-sm-3"><img src="" class="rounded-circle" width:"50" height:"30"></div>
 
     </div></div></div><br><br><br>
     <div id="section2">
-
+<
     <div class="edu"><br><br><h1 class="head">Education</h1><br><p class="quote"><i>The whole purpose of education is to turn mirrors into windows</i><br>--Sydney J. Harris</p>
   </div><br><div class="container-fluid"><div class="sec">
     <div class="row">
