--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </ul>
     </div>
   </nav>
-<br><br><br>
+<br><br><br><br>
 
     <div id="section1">
   <!--  <div class="jumbotron jumbotron-fluid">
@@ -95,7 +95,7 @@
 
     </div></div></div><br><br><br>
     <div id="section2">
-<
+
     <div class="edu"><br><br><h1 class="head">Education</h1><br><p class="quote"><i>The whole purpose of education is to turn mirrors into windows</i><br>--Sydney J. Harris</p>
   </div><br><div class="container-fluid"><div class="sec">
     <div class="row">
@@ -110,104 +110,17 @@
         <h5>Duration: </h5><h5><b>2018-2022</b></h5></div><div class="col-sm-3"> </div></div> </div></div></div>
   <br><br> <div id="section3">
    <div class="edu"><h1 class="head">Technical Skills</h1><br><p class="quote"><i>Skill and confidence are unconquered army</i><br><b>--George Herbert</b></p>
-   </div><br><br><div class="container"><div class="sec">
+   </div><br><br><div class="container">
      <div class="row">
       <!-- <div class="col-sm-3"></div>-->
-       <div class="col-sm-3">
-
-      <div class="card bg-white text-dark">
-        <div class="card-content white-text">
-           <div class="card-header"><h1 style=color:red><b>C++</b></h1></div>
-          <p>C++ is a general-purpose programming language that was developed by Bjarne Stroustrup as an extension of the C language, or "C with Classes" and has since been vastly modernized.
-          .</p>
-        </div>
-        <div class="card-action">
-        Click<a href="https://en.wikipedia.org/wiki/C%2B%2B"> here</a> to know about C++
-
-      </div>
-      </div>
-    </div>
-<div class="col-sm-1"></div>
-    <div class="col-sm-3">
-      <div class="card bg-white text-dark">
-        <div class="card-content white-text">
-          <div class="card-header"><h1 style=color:red><b>C</b></h1></div>
-          <p>Description
-C is a general-purpose, imperative computer programming language, supporting structured programming,  while a static type system prevents many unintended operations.</p>
-        </div>
-        <div class="card-action">
-          Click<a href="https://en.wikipedia.org/wiki/C_(programming_language)"> here</a> to know about C
-
-        </div>
-      </div>
-    </div>
-<div class="col-sm-1"></div>
-    <div class="col-sm-3">
-      <div class="card bg-white text-dark">
-        <div class="card-content white-text">
-          <div class="card-header"><h1 style=color:red><b>Git</h1></b></div>
-          <p>Git is a distributed version-control system for tracking changes in source code during software development. It is designed for coordinating work among programmers.
-          </p>
-        </div>
-        <div class="card-action">
-        Click  <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiyydqH5aTiAhWHvo8KHUMXC2cQFjAAegQIAhAB&url=https%3A%2F%2Fgit-scm.com%2F&usg=AOvVaw1lFNWgbWf8FsbaoU4AOPBr">here </a>to know about git.
-
-        </div>
-      </div>
-    </div>
-  </div><br><br>
-  <div class="row">
-  <!--  <div class="col-sm-3"></div>-->
-    <div class="col-sm-3">
-      <div class="card bg-white text-dark">
-        <div class="card-content white-text">
-          <div class="card-header"><h1 style=color:red><b>Html5</h1></b></div>
-          <p>HTML 5 is a software solution stack that defines the properties and behaviors of web page content by implementing a markup based pattern to it.
-          </p>
-        </div>
-        <div class="card-action">
-          Click <a href="https://en.wikipedia.org/wiki/HTML5">here</a> to know about Html5
-
-        </div>
-      </div>
-    </div>
- <div class="col-sm-1"></div>
-    <div class="col-sm-3">
-      <div class="card bg-white text-dark">
-        <div class="card-content white-text">
-          <div class="card-header"><h1 style=color:red><b>CSS</b></h1></div>
-          <p>CSS stands for Cascading Style Sheets. CSS describes how HTML elements are to be displayed on screen, paper, in other media.The specifications are maintained by W3C</p>
-        </div>
-        <div class="card-action">
-          Click<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets"> here </a>to know about CSS
-
-        </div>
-      </div>
-    </div>
- <div class="col-sm-1"></div>
-    <div class="col-sm-3">
-      <div class="card bg-white text-dark">
-        <div class="card-content white-text">
-          <div class="card-header"><h1 style=color:red><b>Bootstrap</b></h1></div>
-          <p>Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.It is the third-most starred project on github.
-          </p>
-        </div>
-        <div class="card-action">
-          Click<a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)"> here</a> to know about Bootstrap.
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  </div>
-
-  </div>
+       <div class="col-sm-3"></div>
+      <div class="col-sm-6"><ul class="bullets"><li class="each">C++</li><li class="each">C</li><li class="each">Git</li><li class="each">Python</li>
+      <li class="each">Arduino</li><li class="each">Html5</li><li class="each">CSS</li><li class="each">Bootstrap</li></ul></div>
+    </div></div></div></div>
 
 
-  </div>
 
-</div></div></div></div><br><br>
+
 <div id="section4">
   <div class="edu"><h1 class="head"><b>Projects</></h1><br><h3 class="quote"><i>Make an empty space in any corner of your mind<br> and creativity will instantly fill it.</i><br><b>--Dee Hock</b></h3>
   </div>
@@ -215,16 +128,16 @@ C is a general-purpose, imperative computer programming language, supporting str
   <div class="container"><div class="sec">
     <div class="row">
       <div class="col-sm-2"></div>
-      <div class="col-sm-8"><div class="proj"><h3><b>Voice to text conversion</b></h3><hr><br>
+      <div class="col-sm-8"><div class="proj"><h3><b>Voice to text conversion</b></h3><hr>
         This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
           up this project have been mentioned in the readme.md file.Click <a href="https://github.com/promaroy/speech_recog">here</a> to view the project.</div>
-        <br><br>  <div class="proj"><h3><b>Webscraping using python</b></h3><hr><br>
+        <br><br>  <div class="proj"><h3><b>Webscraping using python</b></h3><hr>
           The project was created using python3 and selenium.With the help of this python script ones
             can easily submit a problem to codechef through the terminal without logging in. Click <a href="https://github.com/promaroy/autocoding">here</a> to view the project.</div>
 
 
 
-            <br><br><div class="proj"><h3><b>Django hello world app</b></h3><hr><br>
+            <br><br><div class="proj"><h3><b>Django hello world app</b></h3><hr>
               This project was created using a python framework django.It is a simple hello world app
                 made as a part of glug task. Click <a href="https://github.com/promaroy/django1">here</a> to view the project.
               </div></div></div></div></div><br><br>
