--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <div id="section1">
   <!--  <div class="jumbotron jumbotron-fluid">
     <div class="container">-->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
 
       <h2 class="head"><b>---Proma Roy---</b></h2>
       <h4 class="quote"><a href="https://goo.gl/maps/FNTzXZYnj5K7RUTF9">
