--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       I am currently working on. It also contains the technology skills which I possess.I love to solve problems.Whether it's the most elegant way to write a line of code or  discovering the solution. Viewers are free to contact me through the contact details provided.</b>
       <!--<div class="col-sm-3"><img src="" class="rounded-circle" width:"50" height:"30"></div>--><br>
       <div class="head">  <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-linkedin"></a> <h5>Contact No: 8420042422<br>Email:promaroy20@gmail.com</h5>
+            <a href="#" class="fa fa-linkedin"></a> <h5>Contact No: 8420042422<br>Email<br>:promaroy20@gmail.com</h5>
     </div>
     </div></div></div></div>
     <div id="section2">
