--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
 	$(document).ready(function(){
 		$("#myModal").modal('show');
 	});
-</script>
-<script>
-AOS.init({
-  duration: 1200,
-})</script>
+ </script>
+
 
   </head>
   <body class="bg">
@@ -44,19 +41,19 @@ AOS.init({
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#section1">About me</a>
+          <a class="nav-link" href="#section1"><i class="fa fa-user" style="font-size:24px"></i>About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">Education</a>
+          <a class="nav-link" href="#section2"><i class="fa fa-book" style="font-size:24px"></i>Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section3">Technical skills</a>
+          <a class="nav-link" href="#section3"><i class="fa fa-asterisk" style="font-size:24px"></i>Technical skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section4">Projects</a>
+          <a class="nav-link" href="#section4"><i class="fa fa-desktop" style="font-size:24px"></i>Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section5">Contact</a>
+          <a class="nav-link" href="#section5"><i class="fa fa-phone" style="font-size:24px"></i>Contact</a>
         </li>
       </ul>
     </div>
@@ -93,17 +90,17 @@ AOS.init({
  <div class="carousel-inner">
    <div class="carousel-item active">
      <h1><b>About me</h1></b>
-<p >Hello there!..My name is Proma Roy. I am a resident of Kolkata. I am a freshman pursuing B.Tech in Computer Science and engineering in Nit Durgapur
-.I love to solve problems.Whether it's the most elegant way to write a line of code or  discovering the solution. Viewers are free to contact me through the contact details provided.</p>
+<p >Hii there! I am a freshman pursuing B.Tech in Computer Science and engineering in Nit Durgapur
+.I love to solve problems.Whether it's the most elegant way to write a line of code or  discovering the solution.</p>
    </div>
    <div class="carousel-item">
-     <a href="#section2"><h1 style = "color:white"><b>Education</b></h1><hr><br><p style="color:white" >Includes information about my schooling,tne institution in which I am studying presently and my test scores.</p></a>
+     <a href="#section2"><h1 style = "color:white"><b>Education</b></h1><hr><br><p style="color:white" >This section includes information about my schooling,the institution in which I am studying presently and my test scores(CBSE and ICSE).</p></a>
    </div>
    <div class="carousel-item">
-     <a href="#section3"><h1 style = "color:white"><b>Technical Skills</b></h1><hr><br><p style="color:white">Includes the technical skills which I possess and the tools and technologies which I use frequently in my projects.</p></a>
+     <a href="#section3"><h1 style = "color:white"><b>Technical Skills</b></h1><hr><br><p style="color:white"> This section includes the technical skills which I possess and the tools and technologies which I use frequently in my projects.</p></a>
    </div>
    <div class="carousel-item">
-     <a href="#section4"><h1 style = "color:white"><b>Projects</b></h1><hr><br><p style="color:white">Includes the projects on which I have worked and also the ones I am currently working on.The project links have been provided.</p></a>
+     <a href="#section4"><h1 style = "color:white"><b>Projects</b></h1><hr><br><p style="color:white">This secion includes the projects on which I have worked and also the ones I am currently working on.The project links have been provided.</p></a>
  </div></div><br><br>
 
  <!-- Left and right controls -->
@@ -121,7 +118,7 @@ AOS.init({
 
 
       <div class="head">  <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-linkedin"></a> <h5>Contact No: 8420042422<br>Email<br>:promaroy20@gmail.com</h5>
+            <a href="#" class="fa fa-linkedin"></a> <h5><i class="fa fa-phone" style="font-size:24px"></i>Contact No: 8420042422<br>Email <i class="fa fa-envelope" style="font-size:24px"></i><br>promaroy20@gmail.com</h5>
     </div>
     </div></div></div></div>
     <div id="section2">
@@ -130,21 +127,21 @@ AOS.init({
   </div><div class="each"><br><div class="container-fluid"><div class="sec">
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6"><div class="box"><h6>Modern School</h6><br>Location:Barrackpore,Kolkata-700122
-        <br>Duration: 2003-2010</div><br><br>
-      <div class="box"><h6>Modern English Academy</h6><br>Location:Barrackpore,Kolkata-700122<br>
-        Duration:2010-2018<br>Scored 97.4% in ICSE(2016)and  95.4% in CBSE(2018)</div><br><br>
+      <div class="col-sm-6"><div class="box"><h6>Modern School</h6><br><span class="boxin">Location</span> Barrackpore,Kolkata-700122
+        <br><span class="boxin">Years present</span>2003-2010</div><br><br>
+      <div class="box"><h6>Modern English Academy</h6><br><span class="boxin">Location</span>Barrackpore,Kolkata-700122<br>
+        <span class="boxin">Years present</span>2010-2018<br>Scored 97.4% in ICSE(2016)and  95.4% in CBSE(2018)</div><br><br>
 
-      <div class="box"><h6>National Institute of Technology,Durgapur</h6>Location:Durgapur<br>
-        Duration: 2018-2022</div><div class="col-sm-3"> </div></div> </div></div></div>
+      <div class="box"><h6>National Institute of Technology,Durgapur</h6><span class="boxin">Location</span> Durgapur<br>
+        <span class="boxin">Years present</span>2018-2022</div><div class="col-sm-3"> </div></div> </div></div></div>
   <br><br></div> <div id="section3">
    <div class="edu"><h1 class="head">Technical Skills</h1><br><p class="quote"><i>Skill and confidence are unconquered army</i><br><b>--George Herbert</b></p>
    </div><div class="each"><br><br><div class="container">
      <div class="row">
       <!-- <div class="col-sm-3"></div>-->
        <div class="col-sm-3"></div>
-      <div class="col-sm-6"><div class="box"><b>C++:</b> one of my most preferrable languages for competitive programming.</div><br><div class="box"><b>C:</b>learned it as a part of curriculum.</div><br><div class="box"><b>Git:</b> the only VCS which I use to keep track of my projects.</div><br><div class="box"> <b>Python:</b> used Python as a scripting language for web scraping and in my project related to computer vision.
-      </div><br><div class="box"><b>Arduino:</b> prepared a bot(line follower and obstacle avoider) for Robocity</div><br><div class="box"><b>Html5:</b> used it for preparing layout of this web page.</div><br><div class="box"><b>CSS:</b>used for styling this web page.</div><br><div class="box"><b>Bootstrap:</b>used for styling this web page.</div>
+      <div class="col-sm-6"><div class="box"><span class="boxin"><b>C++</b></span>  one of my most preferrable languages for competitive programming.</div><br><div class="box"><span class="boxin"><b>C</b></span> learned it as a part of curriculum.</div><br><div class="box"><span class="boxin"><b>Git</b></span> the only VCS which I use to keep track of my projects.</div><br><div class="box"> <span class="boxin"><b>Python</b></span> used Python as a scripting language for web scraping and in my project related to computer vision.
+      </div><br><div class="box"><span class="boxin"><b>Arduino</b></span> prepared a bot(line follower and obstacle avoider) for Robocity</div><br><div class="box"><span class="boxin"><b>Html5</b></span> used it for preparing layout of this web page.</div><br><div class="box"><span class="boxin"><b>CSS</b></span> used for styling this web page.</div><br><div class="box"><span class="boxin"><b>Bootstrap</b></span> used for styling this web page.</div>
     </div></div></div></div></div>
 
 
@@ -160,17 +157,17 @@ AOS.init({
       <div class="col-sm-8">
       <div class="box"><h5><b>Voice to text conversion</b></h5><hr>
              This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
-               up this project have been mentioned in the readme.md file.Click <a href="https://github.com/promaroy/speech_recog">here</a> to view the project.
+               up this project have been mentioned in the readme.md file.Click <span class="boxin"><a href="https://github.com/promaroy/speech_recog">here</a></span> to view the project.
     </div><br>
     <div class="box">
      <h5><b>Webscraping using python</b></h5><hr>
         The project was created using python3 and selenium.With the help of this python script ones
-          can easily submit a problem to codechef through the terminal without logging in. Click <a href="https://github.com/promaroy/autocoding">here</a> to view the project.
+          can easily submit a problem to codechef through the terminal without logging in. Click<span class="boxin"> <a href="https://github.com/promaroy/autocoding">here</a></span> to view the project.
     </div><br>
 
     <div class="box">  <h5><b>Django hello world app</b></h5><hr>
         This project was created using a python framework django.It is a simple hello world app
-          made as a part of glug task.Hope to improve it in near future.<br> Click <a href="https://github.com/promaroy/django1">here</a> to view the project.
+          made as a part of glug task.Hope to improve it in near future.<br> Click <span class="boxin"><a href="https://github.com/promaroy/django1">here</a></span> to view the project.
     </div>
   </div></div></div></div><br><br></div></div>
 
