--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </nav>
 
 
-    <div id="section1">
+    <div id="section1"><br>
   <!--  <div class="jumbotron jumbotron-fluid">
     <div class="container">-->
     <div class="container-fluid">
